--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@ r-...
 
 a, button,
 
+
 mg-...
 
 las fuentes en general, 
@@ -15,18 +16,26 @@ las fuentes en general,
 
 .s-btn{
     border-style: solid !important;
+
     background: fixed !important;
+    background-color: #eaeaea;
     min-width: 90px !important;
+    padding: 7px !important;
+
+    -webkit-box-shadow: -10px 10px 25px -15px rgba(0,0,0,0.84) !important;
+    -moz-box-shadow: -10px 10px 25px -15px rgba(0,0,0,0.84) !important;
+    box-shadow: -10px 10px 25px -15px rgba(0,0,0,0.84) !important;
 }
 
 .s-btn-solid{
-    background-color: #f03 !important; /*pare dinamica degradao e una misxin*/
+    background-color: #f03 !important;
 
-    border: 0px !important;
-    padding: 5px !important;
+    border: 1px #f03 !important;
+    
     color: #fff !important; 
 }
 
+/* en varios elementos*/
 a, button, link{
     transition: 0.3s all ease;
     outline: none !important;
